--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "git": "^0.1.5",
     "vue": "^2.6.11",
     "vue-confirm-dialog": "^1.0.2",
-    "vuejs-dialog": "^1.4.2"
+    "vuejs-dialog": "^1.4.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
